Changes between 2.0.7 and 2.0.8:
--------------------------------

Access:
 * Fix ISDB-S tuning
 * FIx crash in QTsound

Demux:
 * Fix use after free in sgimb

MacOSX:
 * Fix interface crashes

Translations:
 * update Welsh translation
 * New Kannada translation


Changes between 2.0.6 and 2.0.7:
--------------------------------

Input:
 * Fix playback termination when switching ES tracks (PowerPC only)
 * Fix memory exhaustion vulnerability when playing specifically crafted
   playlist files

Decoders:
 * Fix WMA Pro, MPEG 4 ALS, APE, MLP and ADPCM-IMA4 playback

Encoders:
 * Fix audio encoding for numerous codecs, notably mp3 and aac

Muxers:
 * Fix noticeable memory leak when creating AVI files

Video output:
 * Fix crash when using libvlc in 3rd party applications (Mac only)

Mac OS X Interface
 * Minor improvements
 * Fix issue which could lead to loss of media files created through transcoding

HTTP Interface
 * Fix two xss vulnerabilities (CVE-2013-3565)

Translations:
 * Update Basque, Simplified Chinese, Ukrainian, Turkish, Portuguese, Norwegian Bokmål,
   Burmese, Lithuanian, Italian, Hindi, Spanish, German, Czech, Danish, Welsh translations
 * New Azerbaijani, Kirgyz, Oriya translations


Changes between 2.0.5 and 2.0.6:
--------------------------------

Access:
 * Fix HTTPS playback with some certificates previously rejected

Audio Output:
 * Improve lookup of human readable device names in AUHAL plugin (OS X)

Demuxers:
 * Fix crash with broken asf files (SA-1302)
 * Fix MKV behaviour with unknown or new ebml elements
 * Fix use-after-free crash in Ogg demuxer, found by Tomi Juntunen
 * Fix regression on some paletted codecs in AVI
 * Fix ALAC in mp4 regression
 * Improvements to the vimeo playlist parser

Decoders:
 * Fix GPU decoding on Intel HD 2000/3000 cards on Windows
 * Fix FLAC 6.1 and 7.1 channel layout
 * Fix crashes in HTML srt subtitles
 * 3rd party codecs updates

Mac OS X: